--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,8 +24,8 @@ jobs:
           pip install -r app/requirements.txt
           pip install pytest
 
-      - name: Run Tests
-        run: pytest
+      - name: Run API Tests
+        run: pytest tests/
 
       - name: Build Docker Image
         run: docker build -t trade-orders-app .
