--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
           pip install pytest
 
       - name: Run API Tests
-        run: pytest tests/
+        PYTHONPATH=./app pytest tests/ -v
 
       - name: Build Docker Image
         run: docker build -t trade-orders-app .
