--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,8 @@ jobs:
           pip install pytest
 
       - name: Run API Tests
-        PYTHONPATH=./app pytest tests/ -v
+        run: PYTHONPATH=./app pytest tests/ -v
+
 
       - name: Build Docker Image
         run: docker build -t trade-orders-app .
