--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,9 +24,16 @@ jobs:
           pip install -r app/requirements.txt
           pip install pytest
 
-      - name: Run API Tests
-        run: PYTHONPATH=./app pytest tests/ -v
+      - name: Start FastAPI Server
+        run: |
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload &
+      
+      - name: Wait for Server to Start
+        run: sleep 5  # Ensure FastAPI has time to start
 
+      - name: Run API Tests
+        run: |
+          PYTHONPATH=./app pytest tests/ -v
 
       - name: Build Docker Image
         run: docker build -t trade-orders-app .
