--- a/app/dockerFile
+++ b/app/dockerFile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y gcc libpq-dev
 
-COPY requirements.txt .
+COPY ./app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
