--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker Image
-        run: docker build -t trade-orders-app .
+        run: docker build -t trade-orders-app -f app/Dockerfile app/
+
 
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@master
