--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y gcc libpq-dev
 
-COPY ./app/requirements.txt .
+COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
