--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,9 +58,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker stop trade-orders-app || true
-            docker rm trade-orders-app || true
-            docker run -d -p 8000:8000 --name trade-orders-app \
+            sudo docker stop trade-orders-app || true
+            sudo docker rm trade-orders-app || true
+            sudo docker run -d -p 8000:8000 --name trade-orders-app \
               -e DB_HOST=${{ secrets.DB_HOST }} \
               -e DB_NAME=orders_db \
               -e DB_USER=postgres \
